--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .contenitore {
-    width: 100%;
+    max-width: 100%;
     height: 100vh;
 }
 
@@ -36,13 +36,24 @@ header .header-sx,
 header .header-dx  {
     width: calc(100% / 3);
     display: flex;
-    justify-content: center;
     align-items: center;
     cursor: pointer;
 }
 
+header .header-sx {
+    justify-content: flex-end;
+}
+
 header .header-sx .elementi-header-sx:not(:first-child) {
     padding-left: 1rem;
+}
+
+header .header-sx .elementi-header-sx a {
+    text-decoration: none;
+}
+
+header .header-sx .elementi-header-sx a:hover {
+    text-decoration: underline;
 }
 
 header .header-center {
@@ -96,6 +107,39 @@ header .header-dx .casella-input input {
     border: none;
     background-color: #eeeeee;
     padding: 1rem 2rem;
+}
+
+header .hamburger-menu {
+    width: calc(100% / 3);
+    line-height: 5rem;
+    text-align: center;
+    font-size: 1.5rem;
+    display: none;
+}
+
+header .tendina {
+    width: 20%;
+    height: 20rem;
+    margin-top: 5rem;
+    background-color: #fff;
+    box-shadow: 2px 2px 8px rgba(0,0,0,0.5);
+    position: absolute;
+    right: 12rem;
+}
+
+header .tendina .el-tendina {
+    text-align: center;
+    line-height: 3.3rem;
+}
+
+header .tendina .el-tendina a {
+    color: #1fad95;
+    text-decoration: none;
+}
+
+header .tendina .el-tendina:hover a {
+    cursor: pointer;
+    text-decoration: underline;
 }
 
 /* * jumbotron */
@@ -162,9 +206,6 @@ main section span {
 
 main section h2 {
     font-size: 2rem;
-}
-
-main section h2 {
     line-height: 1.6;
 }
 
@@ -683,4 +724,34 @@ footer .copyright {
     background-color: #1fad95;
     border-radius: 50%;
     cursor: pointer;
+}
+
+/* * mediaqueries */
+@media screen and (max-width: 1500px){
+
+    header .header-sx,
+    header .header-dx {
+        display: none;
+    }
+
+    header .header-center {
+        width: calc(100% / 2);
+        text-align: center;
+        padding-right: 5rem;
+    }
+
+    header .hamburger-menu {
+        color: #1fad95;
+        display: inline-block;
+        cursor: pointer;
+    }
+}
+
+/* * classi js */
+.show {
+    display: inline-block;
+}
+
+.hidden {
+    display: none;
 }
